# ratpac-two

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  Dockerfile.base  GetS  GetS(pmt_ids)  LICENSE  Makefile  README.md  RatpacConfig.cmake  cformat.sh
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd/include/RAT/: CCCrossSecMessenger.hh  CoincidenceMessenger.hh  DBMessenger.hh  ESCrossSecMessenger.hh  FastNeutronMessenger.hh  GLG4DebugMessenger.hh  GLG4VisMessenger.hh  IBDgenMessenger.hh  IsotopeMessenger.hh  PhysicsListMessenger.hh  ProcBlockManager.hh  RatMessenger.hh  ReacIBDgenMessenger.hh  SNgenMessenger.hh  TrackingMessenger.hh
src/cmd/src/: CCCrossSecMessenger.cc  CoincidenceMessenger.cc  DBMessenger.cc  ESCrossSecMessenger.cc  ESgenMessenger.cc  FastNeutronMessenger.cc  GLG4DebugMessenger.cc  GLG4PrimaryGeneratorMessenger.cc  GLG4VisMessenger.cc  IBDgenMessenger.cc  IsotopeMessenger.cc  PhysicsListMessenger.cc  ProcBlockManager.cc  RatMessenger.cc  ReacIBDgenMessenger.cc  SNgenMessenger.cc  TrackingMessenger.cc
src/contrib/: CMakeLists.txt
src/contrib/Eigen/: CMakeLists.txt
src/contrib/cppflow/: CMakeLists.txt
src/contrib/stlplus/src/: multiio.cc  os_fixes.cc  persistent.cc
src/core/: CMakeLists.txt
src/core/include/: local_g4compat.hh  zmq.hpp  zmq_addon.hpp
src/core/include/RAT/: Chroma.hh  CountProc.hh  EventInfo.hh  FatalError.hh  GLG4HitPMT.hh  GLG4HitPMTCollection.hh  GLG4HitPhoton.hh  GLG4SteppingAction.hh  GLG4VEventAction.hh  GLG4VisManager.hh  Gsim.hh  Log.hh  (+12 more)
src/core/src/: .Gsim.cc.swp  Chroma.cc  ConstructUserProc.cc  CountProc.cc  GLG4HitPMT.cc  GLG4HitPMTCollection.cc  GLG4HitPhoton.cc  GLG4SteppingAction.cc  GLG4VEventAction.cc  GLG4VisManager.cc  Gsim.cc  Log.cc  ProcBlock.cc  Processor.cc  Producer.cc  ProducerBlock.cc  PruneProc.cc  PythonProc.cc  RunManager.cc  SignalHandler.cc  StackingAction.cc  TrackInfo.cc  Trajectory.cc
src/daq/: CMakeLists.txt
src/daq/src/: AfterPulseProc.cc  Digitizer.cc  ForcedTriggerProc.cc  LessSimpleDAQ2Proc.cc  LessSimpleDAQProc.cc  MiniCleanPMTCharge.cc  NoiseProc.cc  PDFPMTCharge.cc  PDFPMTTime.cc  PMTPulse.cc  PMTWaveform.cc  PMTWaveformGenerator.cc  SimpleDAQProc.cc  SplitEVDAQProc.cc  TrueDAQProc.cc  WaveformAnalysis.cc  WaveformAnalysisCommon.cc  WaveformAnalysisGaussian.cc  WaveformAnalysisL1Deconv.cc  WaveformAnalysisLognormal.cc  WaveformAnalysisLucyDDM.cc  WaveformAnalysisRAVEN.cc  WaveformAnalysisRSNNLS.cc  WaveformAnalysisSPEMF.cc  WaveformAnalysisSinc.cc  WaveformAnalyzerBase.cc  WaveformPrep.cc
src/db/: CMakeLists.txt
src/db/src/: DB.cc  DBJsonLoader.cc  DBLink.cc  DBTable.cc  DBTextLoader.cc  HTTPDownloader.cc  json.cc
src/ds/: CMakeLists.txt
src/ds/src/: MCPMT.cc  Root.cc  RunStore.cc
src/du/: CMakeLists.txt
src/du/src/: WaveformAnalysis.cc
src/fit/: CMakeLists.txt
src/fit/mimir/: CMakeLists.txt
src/fit/src/: ClassifyChargeBalance.cc  ClassifyTimesProc.cc  FitBonsaiProc.cc  FitCentroidProc.cc  FitDirectionCenter.cc  FitDirectionCenterProc.cc  FitPathProc.cc  FitQuadProc.cc  FitTensorProc.cc  MiniSim.cc
src/geo/: CMakeLists.txt
src/geo/src/: BWVetGenericChamber.cc  BWVetGenericChamberHit.cc  ConeWaveguideConstruction.cc  ConeWaveguideFactory.cc  DetectorConstruction.cc  DetectorFactory.cc  GDMLWriteStructure.cc  GLG4BoxSD.cc  GLG4PMTSD.cc  GLG4TestSolid.cc  GLG4TorusStack.cc  GeoBoxFactory.cc  GeoBoxFactory_int_box.cc  GeoBoxFactory_int_tube.cc  GeoBoxFactory_sub_box.cc  GeoBoxFactory_sub_tube.cc  GeoBoxFactory_uni_box.cc  GeoBoxFactory_uni_tube.cc  GeoBubbleFactory.cc  GeoBuilder.cc  GeoCalibrationStickFactory.cc  GeoCheSSVesselFactory.cc  GeoCherenkovSourceFactory.cc  GeoConvexLensFactory.cc  GeoCutTubeFactory.cc  GeoEllipticalTubeFactory.cc  GeoEosFactory.cc  GeoFactory.cc  GeoFiberSensitiveDetector.cc  GeoFiberSensitiveDetectorHit.cc  GeoGenericPolygonFactory.cc  GeoLensFactory.cc  GeoLoftFactory.cc  GeoNestedSolidArrayFactoryBase.cc  GeoNestedTubeArrayFactory.cc  GeoNestedTubeConstruction.cc  GeoPMTFactoryBase.cc  GeoPMTParser.cc  GeoPerfBoxFactory.cc  GeoPerfSphereFactory.cc  (+33 more)
src/io/: CMakeLists.txt
src/io/src/: DSReader.cc  DSWriter.cc  InNetProducer.cc  InROOTProducer.cc  OutNetProc.cc  OutNtupleProc.cc  OutROOTProc.cc  TrackCursor.cc  TrackNav.cc
src/physics/: CMakeLists.txt
src/physics/src/: BNLOpWLS.cc  BNLOpWLSBuilder.cc  BNLOpWLSData.cc  Dicebox158Gd.cc  G4CerenkovProcess.cc  G4OpWLSBuilder.cc  GLG4OpAttenuation.cc  GLG4PMTOpticalModel.cc  GLG4Scint.cc  MyG4HadronPhysicsShielding.cc  MyG4HadronPhysicsShieldingLEND.cc  MyG4NeutronPHPBuilder.cc  MyShielding.cc  OpRayleigh.cc  PhotonThinning.cc  PhysicsList.cc  ThinnableG4Cerenkov.cc  nRangeG4Cerenkov.cc
src/quadrature/: CMakeLists.txt
src/quadrature/src/: AdaptiveSimpsonQuadrature.cc
src/quenching/: CMakeLists.txt
src/quenching/src/: IntegratedQuenchingCalculator.cc  NaiveQuenchingCalculator.cc  QuenchingCalculator.cc
src/ratbase/: CMakeLists.txt
src/ratbase/src/: AnyParse.cc  Rat.cc
src/stlplus/: CMakeLists.txt
src/stlplus/src/: debug.cc  dprintf.cc  exceptions.cc  file_system.cc  fileio.cc  multiio.cc  os_fixes.cc  persistent.cc  string_utilities.cc  stringio.cc  textio.cc
src/user/: CMakeLists.txt
src/user/src/: UserAnalProc.cc
src/util/: CMakeLists.txt
src/util/include/: LinearInterp.icc
src/util/src/: GLG4StringUtil.cc  GaussianRatioPDF.cc  GroupVelocityCalculator.cc  LightPathCalculator.cc  MultiChargeDist.cc  NNLS.cc  NPEEstimator.cc  PolygonOrientation.cc  ReadFile.cc  Sampling.cc  SilenceRooFitBanner.cc  SimpsIntegral.cc  StringUtil.cc  TransitTimeCalculator.cc  WaveformUtil.cc  getopt.cc  getopt1.cc
tools/: CMakeLists.txt
tools/bonsaiLikelihoodGeneration/: Makefile  binfile.cc  binfile.h  create_like  create_like.cc  showlike  showlike.cc  timeRes.C  timeRes.txt  timeResiduals.C
tools/genie2rat/: genie2rat.cc
tools/ntuple/: CMakeLists.txt  ntuple.cpp
tools/rat/: CMakeLists.txt  rat.cc  rat.cpp
tools/ratdb2json/: CMakeLists.txt  ratdb2json.cpp
tools/root/: CMakeLists.txt  root.cc  rootinit.C
(+1062 files in other folders)
